--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-sass": "^4.14.1",
     "pdf-viewer-reactjs": "^2.2.3",
     "popper.js": "^1.16.1",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "1.4.3",
     "react-chartist": "^0.14.4",
@@ -38,7 +39,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-to-print": "^2.12.4",
+    "react-to-print": "2.0.0-alpha-1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
