--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pdf-viewer-reactjs": "^2.2.3",
     "popper.js": "^1.16.1",
     "qrcode.react": "^1.0.1",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "1.4.3",
     "react-chartist": "^0.14.4",
