--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@tinymce/tinymce-react": "^3.12.6",
     "antd": "^4.15.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
@@ -44,6 +45,7 @@
     "recharts": "^2.0.9",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "tinymce-react": "^1.3.2",
     "web-vitals": "^1.0.1"
   },
   "optionalDependencies": {
