--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "tinymce-react": "^1.3.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1"
   },
   "optionalDependencies": {
     "jquery": "3.5.1",
