--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-open": "^3.0.1",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
+    "html-react-parser": "^1.2.8",
     "jquery": "^3.6.0",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
@@ -41,14 +42,14 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "react-to-print": "2.0.0-alpha-1",
     "recharts": "^2.0.9",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1",
     "tinymce-react": "^1.3.2",
-    "web-vitals": "^1.0.1",
-    "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1"
+    "web-vitals": "^1.0.1"
   },
   "optionalDependencies": {
     "jquery": "3.5.1",
