--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@material-ui/icons": "^4.11.2",
+    "@rainbow-modules/hooks": "^0.12.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,6 +18,7 @@
     "bootstrap": "^4.6.0",
     "chart.js": "^3.2.1",
     "chartist": "0.10.1",
+    "clipboard-copy": "^2.0.0",
     "font-awesome": "^4.7.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
@@ -39,6 +44,7 @@
     "react-fontawesome": "^1.7.1",
     "react-notification-alert": "0.0.13",
     "react-pdf": "^5.3.0",
+    "react-rainbow-components": "^1.26.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
